fix: incorrect top padding on mobile panel

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -42,7 +42,6 @@
 	#panel {
 		background-color: inherit;
 		min-height: 100%;
-		padding-top: 80px;
 		padding-bottom: 40px;
 	}
 
